# aws-utils

./: README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
awsutils/: athena.py  glue.py  mfa.py  s3.py
awsutils/athena/: queries.py
awsutils/s3/: s3.py
tests/: test_athena.py  test_s3.py
